Fixed overflow

--- a/styles/global/global.css
+++ b/styles/global/global.css
@@ -7,7 +7,6 @@
 html, body {
     height: 100%;
     width: 100%;
-    overflow: hidden;
 }
 
 body {
